src/scss/components/directory-menu/filter-menu/_filter-menu.scss
/*
* @Author: Sebastian Castro
* @Date:   2017-02-28 13:25:52
* @Last Modified by:   Sebastian Castro
* @Last Modified time: 2018-07-04 17:07:30
*/
@import 'uniques-filters';
@import 'subcategorie-item';
@import 'subcategorie-option-item';
@import 'subcategory-depth-2';

#directory-menu.small-width
{
  font-size: .95rem;
  .subcategorie-option-item .arrow-after{ margin-left: .5rem; }
  .icon { 
    margin-right: .6rem;   
  }

  .category-wrapper .subcategories-wrapper:not(.no-withdrawal) 
  {
    margin-left: 1rem;
  }

  .main-categories { 
    width: 3rem; 
    overflow-y: auto;
    overflow-x: hidden;
    .icon { height: 3.4rem; width: 3rem;}
    .icon:before { left: .6rem; }
  }
  .sub-categories .sub-categories-content { padding-right: 0; }
  .sub-categories:not(.with-left-border) .sub-categories-content { padding-left: .2rem; }

  .subcategory-item { 
    padding-left: .6rem; 
    font-size: .9rem;
  }
  .subcategorie-option-item { padding-left: .5rem; }  
  
  .category-wrapper .category-wrapper {
    .subcategory-item { padding-left: .7rem; }
    .subcategorie-option-item { padding-left: .6rem; }  
  }
}

#directory-menu 
{
	.filter-menu 
	{ 
		width: 100%;
    height: auto;
    position: relative;
    @include flexbox();
    @include flex-flow(row nowrap); 
    @include flex(1 auto);
    @media #{$small-only} { height: 100% }
  }

	.main-categories
	{
		width: 3.5rem;
		padding-top: .6rem;
    height: 100%;

    .main-icon 
    {
      padding-top: 0px;

      &:not(.active) { .main-icon-text { transform: rotateZ(-45deg); opacity: .8; } }     
      &:hover { .main-icon-text { opacity: 1; } }
      .main-icon-text 
      {
        text-transform: uppercase;
        @include transition(transform .2s)
        font-size: 0.85rem;
        font-weight: bold;
        opacity: 1;        
      }
    }    

    .icon
    {
	    width: 3.5rem;
    	height: 3.5rem;
    	line-height: 3.5rem;
	    margin: 0;
	    padding-right: 8px;
	    text-align: center;
	    position: relative;
	    //border-bottom: 1px solid #616161;

	    .main-option-tooltip
	    {
	    	display: none;
	    }

	    &:before
	    {
	    	position: absolute;
		    top: 1rem;
		    left: .8rem;
	    }

	    &:not(.active):hover
	    {
	    	cursor: pointer;

		    .main-option-tooltip
		    {
		    	display: block;
			    position: absolute;
			    left: 4rem;
			    top: .5rem;
			    height: 2.5rem;
			    line-height: 2.5rem;
			    z-index: 100;
			    width: 14rem;
			    color: #efefef;
			    font-size: 1rem;
			    border-radius: 5px;
		    }
	    }

	    &.active
	    {
    		padding-right: 8px;    		
	    }
    }

    .main-gogo-icon-background
    {
  	  position: absolute;
  	  top : .6rem;    
	    border-radius: 0 50% 50% 0;
    }
	}

  #main-option-all.show-one-pane-per-main-option .gogo-icon-name-wrapper:hover
  {
    &:after {
      content: "+";
      font-size: 1.4rem;
      font-weight: normal;
      background-color: #eeeeee;      
      padding: 3px 11px;
      border-radius: 3px;
      margin-left: 5px;
      top: 5px;
      line-height: 1rem;
      position: absolute;
      right: 10px;
      z-index: 10;
      top: 11px;
    }
  }

  .secondary-filters {
    padding: 0;
    height: auto;
    border-top: 2px dashed #eeeeee;
    margin-top: 1rem;
    padding-top: .5rem;
  }

	.sub-categories
	{
		@include flex(1 auto);		

		.sub-categorie-main-title
		{
			height: 3rem;
			line-height: 3rem;			
			font-weight:bold;
			text-align:center;	

			@media #{$small-only} { font-size: 1.2rem;}
		}

		.sub-categories-content
		{
			height: calc(100% - 3rem);
			padding-top:0px;

      &.full-height { height: 100%; }

			ul
			{
				height: 100%;
				margin: 0;
				border: 0;
				box-shadow: none;		
				padding-bottom: 2rem;
				overflow-y: auto;
				overflow-x: hidden;
			}
		}
	}		
}

